src/cloud/aws/cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'x64VM CloudFormation Template'

Parameters:
  Environment:
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - staging
      - prod

Resources:
  x64VMCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub 'x64vm-${Environment}'
      CapacityProviders:
        - FARGATE
      DefaultCapacityProviderStrategy:
        - CapacityProvider: FARGATE
          Weight: 1

  x64VMTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub 'x64vm-${Environment}'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: '1024'
      Memory: '2048'
      ExecutionRoleArn: !GetAtt x64VMExecutionRole.Arn
      TaskRoleArn: !GetAtt x64VMTaskRole.Arn
      ContainerDefinitions:
        - Name: x64vm
          Image: !Sub '${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/x64vm:latest'
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
            - ContainerPort: 443
              Protocol: tcp
            - ContainerPort: 8080
              Protocol: tcp
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref x64VMLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: x64vm

  x64VMService:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: !Sub 'x64vm-${Environment}'
      Cluster: !Ref x64VMCluster
      TaskDefinition: !Ref x64VMTaskDefinition
      DesiredCount: 3
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref x64VMSecurityGroup
          Subnets:
            - !Ref PublicSubnet1
            - !Ref PublicSubnet2

  x64VMLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub '/ecs/x64vm-${Environment}'
      RetentionInDays: 30

  x64VMExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  x64VMTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess

  x64VMSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for x64VM
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0

Outputs:
  ClusterName:
    Description: Name of the ECS Cluster
    Value: !Ref x64VMCluster
  ServiceName:
    Description: Name of the ECS Service
    Value: !Ref x64VMService
  SecurityGroupId:
    Description: ID of the Security Group
    Value: !Ref x64VMSecurityGroup
